--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,22 +2,12 @@
   <h1>Apresentação</h1>
   <p>Projeto realizado por Daniele Costa</p>
   <p class="texto">
-    Cápsulas Sonoras é uma obra de arte sonora e web arte realizada em um
-    ambiente virtual onde o/a interator/a navega em um espaço em que se depara
-    com cápsulas sonoras de universos paralelos e tempos distintos do Planeta
-    Terra. Este é um trabalho inédito realizado coletivamente pelos e pelas
-    integrantes do SONatório. Cápsulas Sonoras é inspirada na literatura de
-    ficção científica (Ursula K. Le Guin, Octavia Butler, George Orwell) e em
-    textos de Ailton Krenak (Ideias para adiar o fim do mundo, O amanhã não está
-    à venda e A vida não é útil). As cápsulas são carregadas de memórias
-    afetivas; elas partem de mensagens de nanofios de silício implantados no
-    corpo humano, de gravadores obsoletos ou de gravações de campo de universos
-    paralelos em anos passados e futuros. Que outras configurações da Terra
-    seriam/são possíveis? Se continuarmos vivendo como estamos, desmatando
-    florestas, poluindo mares, rios e lagoas, criando cada vez mais ambientes e
-    alimentos artificiais, como sobreviveremos? Como podemos adiar o fim do
-    mundo? Estas são algumas das indagações motivadoras para a criação das
-    cápsulas sonoras. Cápsulas Sonoras procura trazer uma reflexão sobre nosso
-    modo de vida, sobre formas de sobrevivência e resistência.
+    Cápsulas Sonoras é um projeto existente do grupo SONatório, grupo de
+    extensão da Universidade Federal do Recôncavo da Bahia, feita na linguagem
+    p5.js. Para a disciplina de Servidores II foi tema para prática de uma API,
+    onde cada integrante do grupo cadastra suas informações e pode entrar no
+    ambiente para conferir os cadrastos do que chamamos de "cápuslas", que são
+    criações de áudio e imagem feito por cada um do grupo, trazendo informações
+    como título, descrição e ano de criação.
   </p>
 </div>
