--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     extensão da Universidade Federal do Recôncavo da Bahia, feita na linguagem
     p5.js. Para a disciplina de Servidores II foi tema para prática de uma API,
     onde cada integrante do grupo cadastra suas informações e pode entrar no
-    ambiente para conferir os cadrastos do que chamamos de "cápuslas", que são
+    ambiente para conferir os cadrastos do que chamamos de "cápsulas", que são
     criações de áudio e imagem feito por cada um do grupo, trazendo informações
     como título, descrição e ano de criação.
   </p>
